# portable-ac-monitor

./: .gitignore  LICENSE  README.md  config.example.yaml  config.yaml  install-pi.sh  install-systemd.sh  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
acmonitor/: __init__.py  __main__.py  config.py  config.yaml  database.py  emailer.py  logger.py  logging_setup.py  models.py  monitor.py
acmonitor/retailers/: __init__.py  generic.py
systemd/: acmonitor.service  acmonitor.timer
tests/: test_config.py  test_price_parser.py  test_retailer.py
